[metadata]
name = bsncpsec
version = 0.0.1
summary = Tool to secure BCF control plane
description-file =
    README.rst
author = Big Switch Networks
author-email = support@bigswitch.com
home-page = http://www.bigswitch.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
data_files =
    etc/bsncpsec = etc/bsncpsec_config/config.yaml
packages =
    bsncpsec

[global]
setup-hooks =
    pbr.hooks.setup_hook
    bsncpsec.hooks.setup_hook

[entry_points]
console_scripts =
    bsncpsec = bsncpsec.bsncpsec:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bsncpsec/locale/bsncpsec.pot

[compile_catalog]
directory = bsncpsec/locale
domain = bsncpsec

[update_catalog]
domain = bsncpsec
output_dir = bsncpsec/locale
input_file = bsncpsec/locale/bsncpsec.pot

[wheel]
universal = 1
